Fix the warning that use deprecated method